[package]
name = "lyric_checker_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
lyrics_helper_core = "0.2.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
ttml_processor = { version = "0.2" }
octocrab = "0.49.5"
rand = "0.9.1"
reqwest = "0.13.1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "fs",
] }
serde = "1.0.219"
serde_json = "1.0.142"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
