[package]
name = "lyric_checker_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
lyrics_helper_core = "0.2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ttml_processor = { version = "0.2.0" }
octocrab = "0.49"
rand = "0.9.2"
reqwest = "0.13"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "fs",
] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
serde = "1.0"
serde_json = "1.0"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
