[package]
name = "rebuild-folder"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amll-lyric = "^0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "^1.0"
chrono = "^0.4"
ureq = "^3"
base64 = "^0.22"
rayon = "1"
indicatif = "0.18"
zip = "7.0.0"

lyrics_helper_core = "0.2.0"
ttml_processor = { version = "0.2.0" }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
