[package]
name = "ttml_processor"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version = "4.5.39", features = ["derive"]}
env_logger = "0.11.8"
quick-xml = { version = "0.37.5", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
strum_macros = "0.27.1"
thiserror = "2.0.12"
strum = "0.27.1"
log = "0.4"
lazy_static = "1.5.0"
regex = "1.11.1"
serde_json = "1.0.140"
