[package]
name = "ttml_processor"
version = "0.1.0"
edition = "2024"

[lib]
name = "ttml_processor"
path = "src/lib.rs"

[dependencies]
quick-xml = { version = "0.38", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
strum_macros = "0.27.1"
thiserror = "2.0.12"
strum = "0.27.1"
unicode-segmentation = "1.12.0"
hyphenation = { version = "0.8.4", features = ["embed_en-us"] }
tracing = "0.1.41"
